--- a/updatemanager/build.gradle
+++ b/updatemanager/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
+
+    useLibrary 'org.apache.http.legacy'
+
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 16
@@ -21,7 +24,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile "com.android.support:appcompat-v7:23.2.0"
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'org.apache.httpcomponents:httpcore:4.4.5'
+    compile 'org.apache.httpcomponents:httpclient:4.5.2'
+    compile 'com.google.code.gson:gson:2.7'
 }
